# receipt-parser

./: README.md  pyproject.toml  test-ocr.py
