[tool.poetry]
name = "receipt-parser"
version = "0.1.0"
description = "A receipt reader using OCR"
authors = ["Rameez Khan <rameezkhan.sa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
